--- a/public/icons/icons.html
+++ b/public/icons/icons.html
@@ -184,10 +184,28 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="icon icon-crown"></i>
+            </span>
+            <br>
+            <span class='label'>crown</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="icon icon-date"></i>
             </span>
             <br>
             <span class='label'>date</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-district"></i>
+            </span>
+            <br>
+            <span class='label'>district</span>
         </div>
 
 
@@ -233,6 +251,15 @@
             </span>
             <br>
             <span class='label'>food</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-fork_spoon"></i>
+            </span>
+            <br>
+            <span class='label'>fork_spoon</span>
         </div>
 
 
@@ -431,6 +458,15 @@
             </span>
             <br>
             <span class='label'>user</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-zoom"></i>
+            </span>
+            <br>
+            <span class='label'>zoom</span>
         </div>
 
 
