--- a/public/icons/icons.html
+++ b/public/icons/icons.html
@@ -175,6 +175,33 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="icon icon-clean"></i>
+            </span>
+            <br>
+            <span class='label'>clean</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-close-circle"></i>
+            </span>
+            <br>
+            <span class='label'>close-circle</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-close-sircle"></i>
+            </span>
+            <br>
+            <span class='label'>close-sircle</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="icon icon-close"></i>
             </span>
             <br>
@@ -274,6 +301,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="icon icon-hanger"></i>
+            </span>
+            <br>
+            <span class='label'>hanger</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="icon icon-health"></i>
             </span>
             <br>
@@ -332,6 +368,15 @@
             </span>
             <br>
             <span class='label'>more</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-nursery"></i>
+            </span>
+            <br>
+            <span class='label'>nursery</span>
         </div>
 
 
@@ -445,6 +490,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="icon icon-tap"></i>
+            </span>
+            <br>
+            <span class='label'>tap</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="icon icon-travel"></i>
             </span>
             <br>
@@ -458,6 +512,15 @@
             </span>
             <br>
             <span class='label'>user</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-wc"></i>
+            </span>
+            <br>
+            <span class='label'>wc</span>
         </div>
 
 
